# epub-generator

./: .gitignore  LICENSE  README.md  epub-generator.py  pyproject.toml
epubgen/: __init__.py  epubgen.py
