[project]
name = "epubgen"
version = "0.2.0"
authors = [{ name = "Sami Tabet" }]
description = "Tiny library to programmatically generate .epub files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sfluor/epubgen"
"Bug Tracker" = "https://github.com/sfluor/epubgen/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
